@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*gnome-dv-daemon-0.1.14 (24 Dec 2009)
+
+  24 Dec 2009; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gnome-dv-daemon-0.1.14.ebuild:
+  Version bump.
+
 *gnome-dv-daemon-0.1.12 (14 Oct 2009)
 
   14 Oct 2009; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gnome-dv-daemon-0.1.12.ebuild:
